--- a/app.json
+++ b/app.json
@@ -20,15 +20,13 @@
         },
         "API_HASH":{
             "description":"Get your telegram API HASH from https://my.telegram.org",
-		    "value":"0b2b956cc9e134a5be396da8034a2336"
+            "value":"0b2b956cc9e134a5be396da8034a2336"
         },
         "BOT_TOKEN":{
-            "description":"Get from BotFather",
-            "value":""
+            "description":"Get from BotFather"
         },
         "AUTH_USERS":{
-            "description":"Admin/Owner/Friends ID Seperate by ','  Ex: 44578878,8878899",
-            "value":""
+            "description":"Admin/Owner/Friends ID Seperate by ','  Ex: 44578878,8878899"
         }
     }
 }
