--- a/app.json
+++ b/app.json
@@ -23,12 +23,12 @@
             "value":"0b2b956cc9e134a5be396da8034a2336"
         },
         "BOT_TOKEN":{
-            "description":"Get from BotFather"
-            "value":"6932571394:AAF1sDOPyXFcqkXKmbU9hex2m0D8BjPA4G8"
+            "description":"Get from BotFather",
+            "value":"6932571394:AAF1sDOPyXFcqkXKmbU9hex2m0D8BjPA4G8",
         },
         "AUTH_USERS":{
-            "description":"Admin/Owner/Friends ID Seperate by ','  Ex: 44578878,8878899"
-            "value":"5033114900"
+            "description":"Admin/Owner/Friends ID Seperate by ','  Ex: 44578878,8878899",
+            "value":"5033114900",
         }
     }
 }
